--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -2468,7 +2468,15 @@ input.form-control.newsletter-email {
 /************/
 
 .wrapper-header {
-    overflow: visible;
+    overflow: visible !important;
+}
+
+.home-slider {
+	z-index: -1;
+}
+
+.sticky-nav-wrapper {
+	z-index: -1;
 }
 
 .nsearchinput-pl.well {
